--- a/info.yaml
+++ b/info.yaml
@@ -1,7 +1,7 @@
 # Tiny Tapeout project information
 project:
   title:        "MinAXIL: Gate-Lean 8-bit AXI-Lite Peripheral (TT Harness Compliant)"
-  author:       "Dr. Sowmya K B, Dr. Shilpa D R"
+  author:       "Dr. Sowmya K B, Dr. Shilpa D R, Dr. Veenadivya K"
   discord:      "Sowmya K B, for communication and automatically assigning you a Tapeout role (optional)"
   description:  "AXI4-Lite TinyTapeout peripheral that reads a byte, processes it (bitwise invert), and returns the result via a minimal VALID/READY register interface"
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
