--- a/info.yaml
+++ b/info.yaml
@@ -1,17 +1,17 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "MinAXIL: Gate-Lean 8-bit AXI-Lite Peripheral (TT Harness Compliant)"
+  author:       "Dr. Sowmya K B, Dr. Shilpa D R, Dr. Veenadivya K"
+  discord:      "Sowmya K B, for communication and automatically assigning you a Tapeout role (optional)"
+  description:  "AXI4-Lite TinyTapeout peripheral that reads a byte, processes it (bitwise invert), and returns the result via a minimal VALID/READY register interface"
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz: 25000000  # 25 MHz (synchronous design uses clk)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_axi8_lite_proc"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
@@ -23,34 +23,36 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "AWVALID — write address valid (from AXI master)"
+  ui[1]: "ARVALID — read address valid (from AXI master)"
+  ui[2]: "WVALID — write data valid (from AXI master)"
+  ui[3]: "RREADY — read data ready/accept (from AXI master)"
+  ui[4]: "BREADY — write response ready/accept (from AXI master)"
+  ui[5]: "ADDR[0] — register select: 0=input reg, 1=output reg"
+  ui[6]: "WSTRB[0] — byte write enable (set to 1 for writes)"
+  ui[7]: "Reserved/unused (tie to 0)"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "AWREADY — write address ready (from DUT)"
+  uo[1]: "WREADY — write data ready (from DUT)"
+  uo[2]: "BVALID — write response valid (from DUT)"
+  uo[3]: "ARREADY — read address ready (from DUT)"
+  uo[4]: "RVALID — read data valid (from DUT)"
+  uo[5]: "RDATA[0] — debug: LSB of processed data"
+  uo[6]: "Unused (drives 0)"
+  uo[7]: "Heartbeat (slow toggle for bring-up)"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "Data bus D0 — WDATA[0] on writes (driven by master); RDATA[0] on reads (driven by DUT when RVALID=1)"
+  uio[1]: "Data bus D1 — WDATA[1] / RDATA[1]"
+  uio[2]: "Data bus D2 — WDATA[2] / RDATA[2]"
+  uio[3]: "Data bus D3 — WDATA[3] / RDATA[3]"
+  uio[4]: "Data bus D4 — WDATA[4] / RDATA[4]"
+  uio[5]: "Data bus D5 — WDATA[5] / RDATA[5]"
+  uio[6]: "Data bus D6 — WDATA[6] / RDATA[6]"
+  uio[7]: "Data bus D7 — WDATA[7] / RDATA[7]"
+
 
 # Do not change!
 yaml_version: 6
+
