--- a/info.yaml
+++ b/info.yaml
@@ -1,11 +1,11 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "MinAXIL: Gate-Lean 8-bit AXI-Lite Peripheral (TT Harness Compliant)"      # Project title
+  author:       "Dr. Sowmya K B, Dr. Shilpa D R, Dr. Veenadivya K"      # Your name
+  discord:      "Dr. Sowmya K B"    
+  description:  "AXI4-Lite TinyTapeout peripheral that reads a byte, processes it (bitwise invert), and returns the result via a minimal VALID/READY register interface"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     25000000  # 25 MHz (synchronous design uses clk)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
