--- a/info.yaml
+++ b/info.yaml
@@ -1,57 +1,52 @@
-# Tiny Tapeout project information
+# SPDX-License-Identifier: Apache-2.0
+# SPDX-FileCopyrightText: © 2024 Your Name
+
+---
 project:
-  title:        "MinAXIL: Gate-Lean 8-bit AXI-Lite Peripheral (TT Harness Compliant)"
-  author:       "Dr. Sowmya K B, Dr. Shilpa D R, Dr. Veenadivya K"
-  discord:      "Sowmya K B, for communication and automatically assigning you a Tapeout role (optional)"
-  description:  "AXI4-Lite TinyTapeout peripheral that reads a byte, processes it (bitwise invert), and returns the result via a minimal VALID/READY register interface"
-  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz: 25000000  # 25 MHz (synchronous design uses clk)
+  name: "Simple Echo Design"
+  description: "A Tiny Tapeout demo that echoes 8 input bits (ui_in) directly to 8 output bits (uo_out)."
+  author: "Dr. Sowmya K B, Dr. Veenadivya Krishna, Dr. Shilpa D R"
+  license: "Apache-2.0"
 
-  # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
+# Clock: Tiny Tapeout requires declaring the frequency if your design uses it
+clock_hz: 25000000   # 25 MHz
 
-  # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_axi8_lite_proc"
+# I/O description
+pins:
+  inputs:
+    - ui_in[0]: "Input bit 0"
+    - ui_in[1]: "Input bit 1"
+    - ui_in[2]: "Input bit 2"
+    - ui_in[3]: "Input bit 3"
+    - ui_in[4]: "Input bit 4"
+    - ui_in[5]: "Input bit 5"
+    - ui_in[6]: "Input bit 6"
+    - ui_in[7]: "Input bit 7"
+  outputs:
+    - uo_out[0]: "Echo of ui_in[0]"
+    - uo_out[1]: "Echo of ui_in[1]"
+    - uo_out[2]: "Echo of ui_in[2]"
+    - uo_out[3]: "Echo of ui_in[3]"
+    - uo_out[4]: "Echo of ui_in[4]"
+    - uo_out[5]: "Echo of ui_in[5]"
+    - uo_out[6]: "Echo of ui_in[6]"
+    - uo_out[7]: "Echo of ui_in[7]"
+  bidirectional:
+    - uio_in[7:0]: "Unused bidirectional inputs"
+    - uio_out[7:0]: "Unused bidirectional outputs"
+    - uio_oe[7:0]: "Bidirectional enables (unused)"
 
-  # List your project's source files here.
-  # Source files must be in ./src and you must list each source file separately, one per line.
-  # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
-  source_files:
-    - "project.v"
+# Test files
+tests:
+  - tests/test_tt_um_simple_echo.py
 
-# The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
-# This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
-pinout:
-  # Inputs
-  ui[0]: "AWVALID — write address valid (from AXI master)"
-  ui[1]: "ARVALID — read address valid (from AXI master)"
-  ui[2]: "WVALID — write data valid (from AXI master)"
-  ui[3]: "RREADY — read data ready/accept (from AXI master)"
-  ui[4]: "BREADY — write response ready/accept (from AXI master)"
-  ui[5]: "ADDR[0] — register select: 0=input reg, 1=output reg"
-  ui[6]: "WSTRB[0] — byte write enable (set to 1 for writes)"
-  ui[7]: "Reserved/unused (tie to 0)"
+# Docs (optional: you can add block diagram or images <1MB)
+documentation: |
+  ## How it works
+  This is the simplest possible Tiny Tapeout design. Whatever is driven on `ui_in`
+  is passed directly to `uo_out`, provided `ena` is high. If `ena` is low,
+  the outputs are forced to zero.
 
-  # Outputs
-  uo[0]: "AWREADY — write address ready (from DUT)"
-  uo[1]: "WREADY — write data ready (from DUT)"
-  uo[2]: "BVALID — write response valid (from DUT)"
-  uo[3]: "ARREADY — read address ready (from DUT)"
-  uo[4]: "RVALID — read data valid (from DUT)"
-  uo[5]: "RDATA[0] — debug: LSB of processed data"
-  uo[6]: "Unused (drives 0)"
-  uo[7]: "Heartbeat (slow toggle for bring-up)"
-
-  # Bidirectional pins
-  uio[0]: "Data bus D0 — WDATA[0] on writes (driven by master); RDATA[0] on reads (driven by DUT when RVALID=1)"
-  uio[1]: "Data bus D1 — WDATA[1] / RDATA[1]"
-  uio[2]: "Data bus D2 — WDATA[2] / RDATA[2]"
-  uio[3]: "Data bus D3 — WDATA[3] / RDATA[3]"
-  uio[4]: "Data bus D4 — WDATA[4] / RDATA[4]"
-  uio[5]: "Data bus D5 — WDATA[5] / RDATA[5]"
-  uio[6]: "Data bus D6 — WDATA[6] / RDATA[6]"
-  uio[7]: "Data bus D7 — WDATA[7] / RDATA[7]"
-
-
-# Do not change!
-yaml_version: 6
+  ## How to test
+  - Run the Cocotb testbench with `make test`.
+  - Or run the Verilog testbench with `iverilog` and `vvp`.
